--- a/app/src/css/slick/slick1.css
+++ b/app/src/css/slick/slick1.css
@@ -13,6 +13,13 @@
     box-sizing: border-box;
 }
 
+
+.slick-active {
+    transform: scale(1.1);
+}
+slick-track {
+    margin-top: 160px !important;
+}
 /************************************************************
 				Clearfix
 ************************************************************/
