--- a/app/src/css/slick/slick1.css
+++ b/app/src/css/slick/slick1.css
@@ -691,10 +691,11 @@
 
 @media only screen and (max-width: 40.0625em) {
     .wpsisac-image-slide img {
-        height: 400px !important;
-        width: 300px !important;
-        object-position: top center !important;
-        margin-left: -150px;
+        /* height: 400px !important; */
+        /* width: 300px !important; */
+        /* object-position: top center !important; */
+         margin-left: -80px;
+         /* margin-right: 30px; */
     }
 
     .slick-prev {
@@ -738,6 +739,15 @@
         transition: all 300ms ease 0s;
     }
 }
+
+@media  screen and (max-width: 480px) {
+    .slick-current + .slick-slide {
+        display: none;
+    }
+}
+
+
+
 
 
 
