--- a/app/src/css/slick/slick1.css
+++ b/app/src/css/slick/slick1.css
@@ -694,7 +694,7 @@
         /* height: 400px !important; */
         /* width: 300px !important; */
         /* object-position: top center !important; */
-         margin-left: -80px;
+         /* margin-left: -80px; */
          /* margin-right: 30px; */
     }
 
