--- a/app/src/pages/MainPage/Slider/sliderResp.css
+++ b/app/src/pages/MainPage/Slider/sliderResp.css
@@ -31,7 +31,7 @@
     @media (max-width: 456px){
       .sliderMobileDevice {
          max-width: 356px !important;
-         /* margin-top: 150px; */
+          margin-top: 100px; 
        }
       }
 
@@ -71,6 +71,8 @@
         }
         }
         
+
+
 
        
        
