main background change

--- a/app/src/css/main2.css
+++ b/app/src/css/main2.css
@@ -13264,7 +13264,7 @@ d
 }
 
 .private-and-secure .description {
-    background: #ECEFFC;
+    background: #7D7D7D;
     border-radius: 20px;
 }
 
