--- a/app/src/pages/MainPage/Features/features.css
+++ b/app/src/pages/MainPage/Features/features.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 456px) {
+/* @media screen and (max-width: 456px) {
     pcnp-feautures-block {
         margin-left: -15px;
     }
@@ -8,4 +8,4 @@
     pcnp-feautures-block2 {
         margin-left: -15px;
     }
-}
+} */
