--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -2471,18 +2471,37 @@ svg#loader g:last-child circle {
 }
 .navbar ul.navbar-nav li .nav-link {
   font-size : 0.8rem;
-  color: #FFFFFF;
+  color: rgba(51, 51, 51, var(--text-opacity));
   font-weight : 700;
   letter-spacing : 0.5px;
   padding : 0.21rem 0.95rem;
   text-decoration : none;
 }
+
+.navbar ul.navbar-nav li .nav-link:hover{
+  font-size : 0.8rem;
+  color:rgb(58, 86, 212);
+  font-weight : 700;
+  letter-spacing : 0.5px;
+  padding : 0.21rem 0.95rem;
+  text-decoration : none;
+}
+
+.dropdown:hover {
+  font-size : 0.8rem;
+  color:rgb(58, 86, 212);
+  font-weight : 700;
+  letter-spacing : 0.5px;
+  padding : 0.21rem 0.95rem;
+  text-decoration : none;
+}
+
 .navbar ul.navbar-nav li::last-child {
   margin-right : 0.5rem;
 }
 .navbar .dropdown a {
   font-size : 0.8rem;
-  color : #FFFFFF;
+  color : rgba(51, 51, 51, var(--text-opacity));
   font-weight : 700;
   text-decoration : none;
   padding : 1.9rem 0.65rem;
@@ -2498,7 +2517,7 @@ svg#loader g:last-child circle {
   padding : 0.5rem 0.75rem;
 }
 .navbar .dropdown .dropdown-menu a:before {
-  font-family : 'themify';
+  /* font-family : 'themify';
   content : '\e649';
   padding-right : 0.5rem;
   font-weight : 700;
@@ -2506,7 +2525,7 @@ svg#loader g:last-child circle {
   -webkit-transition : all 0.5s ease;
        -o-transition : all 0.5s ease;
      -moz-transition : all 0.5s ease;
-          transition : all 0.5s ease;
+          transition : all 0.5s ease; */
 }
 .navbar .dropdown .dropdown-menu a.dropdown-item {
   border : none;
