--- a/app/src/css/PCN-3d-animation2.css
+++ b/app/src/css/PCN-3d-animation2.css
@@ -2524,6 +2524,7 @@
       } */ */
       
       /* 3d animation header section : Head area css */
+      .n
       .head-area {
         position : relative;
       }
