--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -13,6 +13,18 @@
 
     -------------------------------------------------------------------------------------------*/
 
+    .font-display {
+      font-family: "Manrope", sans-serif;
+    }
+    
+    .font-body {
+      font-family: "IBM Plex Sans", apple-system, BlinkMacSystemFont, Segoe UI, Roboto;
+    }
+    
+    .font-special {
+      font-family: "IBM Plex Mono", apple-system, BlinkMacSystemFont, Segoe UI, Roboto;
+    }
+
     * {
       font-family: "Manrope", sans-serif;
     }
@@ -2471,14 +2483,27 @@ svg#loader g:last-child circle {
 }
 .navbar ul.navbar-nav li .nav-link {
   font-size : 0.8rem;
-  color: rgba(51, 51, 51, var(--text-opacity));
+  /* color: #fff; */
   font-weight : 700;
   letter-spacing : 0.5px;
   padding : 0.21rem 0.95rem;
   text-decoration : none;
 }
 
+ .nav-link2 {
+  color: rgb(25, 25, 25) !important;
+}
+
 .navbar ul.navbar-nav li .nav-link:hover{
+  font-size : 0.8rem;
+  color:rgb(58, 86, 212);
+  font-weight : 700;
+  letter-spacing : 0.5px;
+  padding : 0.21rem 0.95rem;
+  text-decoration : none;
+}
+
+.navbar ul.navbar-nav li .nav-link2:hover{
   font-size : 0.8rem;
   color:rgb(58, 86, 212);
   font-weight : 700;
@@ -2501,7 +2526,7 @@ svg#loader g:last-child circle {
 }
 .navbar .dropdown a {
   font-size : 0.8rem;
-  color : rgba(51, 51, 51, var(--text-opacity));
+  color : #fff;
   font-weight : 700;
   text-decoration : none;
   padding : 1.9rem 0.65rem;
@@ -2584,17 +2609,22 @@ svg#loader g:last-child circle {
 }
 
 header .navbar.navbar-fixed {
-  background : -webkit-gradient(linear, left top, right top, from(#140E38), to(#194089));
-  background : -webkit-linear-gradient(left, #140E38, #194089);
-  background :    -moz-linear-gradient(left, #140E38, #194089);
-  background :      -o-linear-gradient(left, #140E38, #194089);
-  background :         linear-gradient(to right, #140E38, #194089);
+  background: linear-gradient(to right, #000, #232526);
+ background-color: #000; 
   padding : 0.75rem 0;
 }
 
 header .navbar.navbar-shadow {
-  -webkit-box-shadow : 0 5px 40px rgba(14, 42, 76, 0.2);
-          box-shadow : 0 5px 40px rgba(14, 42, 76, 0.2);
+  -webkit-box-shadow : rgba(0, 0, 0, 0.04) 0px 3px 40px;
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 40px;
+}
+
+.dropdown-menu{
+  background: linear-gradient(to right, #000, #232526);
+  background-color: #000; 
+  -webkit-box-shadow : white;
+  box-shadow: white;
+  border-top: 1px solid rgb(253, 253, 253);
 }
 
 /* Medium devices (tablets, 768px and up) */
