--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -3521,7 +3521,7 @@ header .navbar.navbar-shadow {
   padding-top : 8.5rem;
   padding-bottom : 2.5rem;
   position : relative;
-  background : url('../images/footer-main.png') no-repeat center center;
+  background : url('../images/viber_image_2021-12-23_16-29-23-221.png') no-repeat center center;
   -webkit-background-size : cover;
           background-size : cover;
 }
