--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -3518,12 +3518,17 @@ header .navbar.navbar-shadow {
 /* 3d animation footer section : footer area css */
 .footer {
   /* margin-top : 6.5rem; */
-  padding-top : 8.5rem;
+  padding-top : 6.5rem !important;
   padding-bottom : 2.5rem;
   position : relative;
-  background : url('../images/viber_image_2021-12-23_16-29-23-221.png') no-repeat center center;
+  /* background : url('../images/viber_image_2021-12-23_16-29-23-221.png') no-repeat center center; */
   -webkit-background-size : cover;
           background-size : cover;
+          background: linear-gradient(to right, #000, #232526);
+          background-color: rgba(0, 0, 0, 0);
+      background-color: #000;
+      box-shadow: rgba(0, 0, 0, 0.04) 40px 3px 40px;
+      
 }
 .footer.footer-dark {
   color : #FFFFFF;
