--- a/app/src/css/our.css
+++ b/app/src/css/our.css
@@ -570,4 +570,39 @@ border-color: rgba(51, 51, 51, var(--border-opacity));
   }
 
 
-  
+
+ .title-bottom-line {
+    border: 1px solid;
+    width: 140px;
+ }
+
+
+ @media  screen and (max-device-width: 767px) {
+    .title-bottom-line {
+       display: none;
+   }
+} 
+
+
+@media  screen and (max-device-width: 998px) {
+    .title-bottom-line {
+        border: 1px solid;
+        width: 100px;
+   }
+} 
+
+@media  screen and (max-device-width: 998px) {
+    .footer .footer-wrapper .title {
+        font-size: 15px !important;
+   }
+} 
+
+@media  screen and (max-device-width: 998px) {
+    .footer .footer-wrapper ul.useful-links li {
+        font-size: 12.008px !important;
+   }
+} 
+
+
+
+
