--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -3537,8 +3537,8 @@ header .navbar.navbar-shadow {
   color : #000000;
 }
 .footer .footer-wrapper .title {
-  margin-bottom : 40px;
-  font-size: 20px !important;
+  /* margin-bottom : 40px; */
+  font-size: 20px;
 }
 .footer .footer-wrapper .logo-text {
   font-size : 1.5rem;
@@ -3548,7 +3548,7 @@ header .navbar.navbar-shadow {
 }
 .footer .footer-wrapper ul.useful-links li {
   line-height : 30px;
-  font-size: 15.008px !important;
+  font-size: 15.008px;
 }
 .footer .footer-wrapper ul.useful-links li a {
   color : #FFFFFF;
