--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -2456,7 +2456,7 @@ svg#loader g:last-child circle {
 }
 .navbar .navbar-brand img {
   margin-right : 0.65rem;
-  width: 160px;
+  /* width: 160px; */
   height: 60px;
 }
 .navbar .navbar-brand .brand-text {
